--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -1,12 +1,16 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="UTF-8">
-        <title>{% block title %}Welcome!{% endblock %}</title>
-        {% block stylesheets %}{% endblock %}
-    </head>
-    <body>
-        {% block body %}{% endblock %}
-        {% block javascripts %}{% endblock %}
-    </body>
+<head>
+	<meta charset="UTF-8">
+	<title>{% block title %}Welcome!{% endblock %}</title>
+	{{ encore_entry_link_tags('base') }}
+	{% block stylesheets %}
+	{% endblock %}
+</head>
+<body>
+{% block body %}{% endblock %}
+{{ encore_entry_script_tags('base') }}
+{% block javascripts %}
+{% endblock %}
+</body>
 </html>
