--- a/templates/main/show.html.twig
+++ b/templates/main/show.html.twig
@@ -8,10 +8,28 @@
 {% block body %}
 	
 	<div class="example-wrapper">
-		
-		
 		<div class="container">
-		
+			<div class="row">
+				{% for character in characters %}
+					<div class="col-md-3 mb-3">
+						<div class="card">
+							<img class="card-img-top" src="{{ character.thumbnail.path }}.{{ character.thumbnail.extension }}" alt="{{ character.name }}-image">
+							<div class="card-body">
+								<h5 class="card-title">{{ character.name }}</h5>
+								<p class="card-text">
+									{% if character.description is empty %}
+										This character has no description yet
+									{% else %}
+										{{ character.description }}
+									{% endif %}
+								</p>
+								<a href="#" class="btn btn-primary">Go somewhere</a>
+							</div>
+						</div>
+					</div>
+				{% endfor %}
+			</div>
+			
 		</div>
 	</div>
 	
