--- a/templates/main/show.html.twig
+++ b/templates/main/show.html.twig
@@ -9,11 +9,16 @@
 	
 	<div class="example-wrapper">
 		<div class="container">
+			{{ dump(characters) }}
+			{#============ LES CARTES DES PERSONNAGES ===========#}
 			<div class="row">
+				
 				{% for character in characters %}
 					<div class="col-md-3 mb-3">
 						<div class="card">
-							<img class="card-img-top" src="{{ character.thumbnail.path }}.{{ character.thumbnail.extension }}" alt="{{ character.name }}-image">
+							<img class="card-img-top"
+							     src="{{ character.thumbnail.path }}.{{ character.thumbnail.extension }}"
+							     alt="{{ character.name }}-image">
 							<div class="card-body">
 								<h5 class="card-title">{{ character.name }}</h5>
 								<p class="card-text">
@@ -30,6 +35,45 @@
 				{% endfor %}
 			</div>
 			
+			{#================ LA PAGINATION ======================#}
+			
+			{% if page is not empty %}
+				
+				<nav aria-label="Page navigation">
+					<ul class="pagination justify-content-center">
+						{% if page == 1 %}
+							<li class="page-item disabled"><a class="page-link"
+							                                  href="">Previous</a>
+							</li>
+						{% else %}
+							<li class="page-item"><a class="page-link"
+							                         href="{{ path( 'show' , {'page' : page - 1}) }}">Previous</a>
+							</li>
+						{% endif %}
+						{% for i in 0..totalPages %}
+							<li class="page-item {% if page == loop.index %}active{% endif %}"><a class="page-link"
+							                         href="{{ path( 'show' , {'page' : loop.index}) }}">{{ loop.index }}</a>
+							</li>
+						{% endfor %}
+						{% if page >= totalPages  %}
+							<li class="page-item disabled"><a class="page-link" href="#">Next</a></li>
+						{% else %}
+							<li class="page-item"><a class="page-link" href="{{ path( 'show' , {'page' : page + 1}) }}">Next</a></li>
+						{% endif %}
+					</ul>
+					<div class="text-center">
+						
+						<a href="{{ path('show') }}" class="btn btn-primary">Afficher tous les personnages sur une seule
+							page</a>
+					</div>
+				
+				</nav>
+			
+			{% else %}
+				<div class="text-center">
+					<a href="{{ path('show', {'page' : 1 }) }}" class="btn btn-primary">Afficher la pagination</a>
+				</div>
+			{% endif %}
 		</div>
 	</div>
 	
