--- a/templates/partials/footer.html.twig
+++ b/templates/partials/footer.html.twig
@@ -1,4 +1,3 @@
-
-<footer class="mt-5 bg-light py-5 text-center">
-    <p>Copyright SymBNB</p>
+<footer class="mt-5 text-center">
+    <p>Copyright ChuGu.fr</p>
 </footer>
