--- a/assets/css/base.scss
+++ b/assets/css/base.scss
@@ -2,7 +2,15 @@
 body {
     background-color: lightgrey;
     background-image: url('../images/background.jpg');
-    background-size: cover;
+    background-size: 100%;
+    .bg-details {
+        background-image: url("../images/bg-details.jpg");
+    }
+    .bg-carbon {
+        border-radius: 10px;
+        background-image: url("../images/bg-carbon.jpg");
+        background-size: contain;
+    }
     footer {
         color: white;
         background: none;
@@ -17,3 +25,4 @@ body {
     background-repeat: repeat;
     background-size: contain;
 }
+
