--- a/templates/partials/header.html.twig
+++ b/templates/partials/header.html.twig
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-expand-lg navbar-light background-marvel mb">
-    <a class="navbar-brand" href="{{ path('show') }}">
+    <a class="navbar-brand" href="{{ path('homepage') }}">
         <img class="logo" src="{{ '/images/marvel-logo.png' }}" alt="marvel-logo">
     </a>
 </nav>
