--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -9,7 +9,11 @@
 </head>
 <body>
 {% include 'partials/header.html.twig' %}
-{% block body %}{% endblock %}
+<div id="barba-wrapper">
+	<div class="barba-container">
+		{% block body %}{% endblock %}
+	</div>
+</div>
 {{ encore_entry_script_tags('base') }}
 {% include 'partials/footer.html.twig' %}
 {% block javascripts %}
