--- a/templates/main/details.html.twig
+++ b/templates/main/details.html.twig
@@ -30,7 +30,7 @@
 			</div>
 		
 			<div class="mt-5 ">
-				<h2>Nombre des comics où {{ character.name }} apparaît : <span class="badge badge-success">{{ character.comics.available }}</span></h2>
+				<h2><strong>{{ character.name }}</strong> apparaît dans <span class="badge badge-success">{{ character.comics.available }}</span> comics</h2>
 				<h3 class="mb-3">Liste des 3 premiers comics où vous retrouverez {{ character.name }} !</h3>
 				<ul class="list-group">
 					{% for comic in character.comics.items|slice(0,3) %}
@@ -39,7 +39,7 @@
 				</ul>
 			</div>
 			<div class="mt-3">
-				<a href="{{ path('show', {'page': 1 }) }}" class="btn btn-primary"><i class="fas fa-arrow-left"></i>Retour</a>
+				<a href="{{ path('show', {'page': 1 }) }}" class="btn btn-primary haveLoader"><i class="fas fa-arrow-left"></i>Retour</a>
 			</div>
 		</div>
 		
