--- a/templates/main/show.html.twig
+++ b/templates/main/show.html.twig
@@ -32,7 +32,7 @@
 										{{ character.description }}
 									{% endif %}
 								</p>
-								<a href="{{ path('show_details', {'id' : character.id}) }}" class="btn btn-primary"><i class="fas fa-address-card"></i>&nbsp;Voir la fiche</a>
+								<a href="{{ path('show_details', {'id' : character.id}) }}" class="btn btn-primary haveLoader"><i class="fas fa-address-card"></i>&nbsp;Voir la fiche</a>
 							</div>
 						</div>
 					</div>
@@ -55,7 +55,7 @@
 							</li>
 						{% endif %}
 						{% for i in 0..totalPages %}
-							<li class="page-item {% if page == loop.index %}active{% endif %}"><a class="page-link"
+							<li class="page-item {% if page == loop.index %}active{% endif %} haveLoader"><a class="page-link"
 							                         href="{{ path( 'show' , {'page' : loop.index}) }}">{{ loop.index }}</a>
 							</li>
 						{% endfor %}
