Changement de nom pour la page 'show'=>'show_characters'

--- a/templates/main/homepage.html.twig
+++ b/templates/main/homepage.html.twig
@@ -14,7 +14,7 @@
 				<source src="{{ asset('videos/marvel-intro.webm') }}" type="video/webm">
 			</video>
 			<div class="start-btn-container text-center mt-5">
-				<a id="start-btn" href="{{ path('show', {'page' : 1}) }}" class="btn btn-success haveLoader">COMMENCER</a>
+				<a id="start-btn" href="{{ path('show_characters', {'page' : 1}) }}" class="btn btn-success haveLoader">COMMENCER</a>
 			</div>
 		</div>
 		
