--- a/templates/main/details.html.twig
+++ b/templates/main/details.html.twig
@@ -39,7 +39,7 @@
 				</ul>
 			</div>
 			<div class="mt-3">
-				<a href="{{ path('show', {'page': 1 }) }}" class="btn btn-primary haveLoader"><i class="fas fa-arrow-left"></i>Retour</a>
+				<a href="{{ path('show_characters', {'page': 1 }) }}" class="btn btn-primary haveLoader"><i class="fas fa-arrow-left"></i>Retour</a>
 			</div>
 		</div>
 		
