--- a/templates/main/showCharacters.html.twig
+++ b/templates/main/showCharacters.html.twig
@@ -2,17 +2,22 @@
 
 {% block title %}Liste des personnages{% endblock %}
 {% block stylesheets %}
-	{{ encore_entry_link_tags('show') }}
+	{{ encore_entry_link_tags('showCharacters') }}
 {% endblock %}
 
 {% block body %}
+	
+	<form action="{{ path('show_characters_form' )}}">
+		
+		<input type="text">
+	</form>
 	
 	<div class="example-wrapper">
 		<div class="container">
 			{#============ LES CARTES DES PERSONNAGES ===========#}
 			<div class="row">
 				{% for character in characters %}
-					<div class="col-md-3 mb-3">
+					<div class="col-md-6 col-lg-3 mb-3">
 						<div class="card">
 							<a href="{{ path('show_details', {'id' : character.id}) }}">
 							<img class="card-img-top"
@@ -81,6 +86,6 @@
 	</div>
 	
 	{% block javascripts %}
-		{{ encore_entry_script_tags('show') }}
+		{{ encore_entry_script_tags('showCharacters') }}
 	{% endblock %}
 {% endblock %}
