Travail sur le formulaire d'acquisition de personnages

--- a/templates/main/details.html.twig
+++ b/templates/main/details.html.twig
@@ -2,7 +2,7 @@
 
 {% block title %}Liste des personnages{% endblock %}
 {% block stylesheets %}
-	{{ encore_entry_link_tags('show') }}
+	{{ encore_entry_link_tags('show_characters') }}
 {% endblock %}
 
 {% block body %}
@@ -46,6 +46,6 @@
 	</div>
 	
 	{% block javascripts %}
-		{{ encore_entry_script_tags('show') }}
+		{{ encore_entry_script_tags('show_characters') }}
 	{% endblock %}
 {% endblock %}
