--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<meta charset="UTF-8">
+	<link rel="icon" type="image/png" href="{{ asset('images/deadpool-icon.png') }}"/>
 	<title>{% block title %}Welcome!{% endblock %}</title>
 	{{ encore_entry_link_tags('base') }}
 	{% block stylesheets %}
