--- a/templates/main/details.html.twig
+++ b/templates/main/details.html.twig
@@ -2,7 +2,7 @@
 
 {% block title %}Liste des personnages{% endblock %}
 {% block stylesheets %}
-	{{ encore_entry_link_tags('show_characters') }}
+	{{ encore_entry_link_tags('showCharacters') }}
 {% endblock %}
 
 {% block body %}
@@ -39,13 +39,17 @@
 				</ul>
 			</div>
 			<div class="mt-3">
-				<a href="{{ path('show_characters', {'page': 1 }) }}" class="btn btn-primary haveLoader"><i class="fas fa-arrow-left"></i>Retour</a>
+				<a href="{{ path('show_characters', {
+					'charactersQty' : charactersQty,
+					'offset': offset,
+					'page' : page }) }}" class="btn btn-primary haveLoader">
+					<i class="fas fa-arrow-left"></i>Retour</a>
 			</div>
 		</div>
 		
 	</div>
 	
 	{% block javascripts %}
-		{{ encore_entry_script_tags('show_characters') }}
+		{{ encore_entry_script_tags('showCharacters') }}
 	{% endblock %}
 {% endblock %}
